--- a/vueblocks/index.html
+++ b/vueblocks/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/src/assets/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hbve</title>
+    <title>HueBlocks New</title>
   </head>
   <body>
     <div id="app"></div>
