--- a/vueblocks/index.html
+++ b/vueblocks/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/src/assets/favicon.ico">
+    <link rel="icon" href="/src/assets/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HueBlocks New</title>
   </head>
